Revert "Fix unnecessary overflow-x in aircraft table"
This reverts commit d92bce703927988e1a552aad08e3d03ab836ee3a.

--- a/webapp/src/app/_components/aircraft-table/aircraft-table.component.scss
+++ b/webapp/src/app/_components/aircraft-table/aircraft-table.component.scss
@@ -14,6 +14,10 @@
 
 .aircraft-table {
   margin-top: 3.5rem;
+  margin-top: 3.8rem;
+  margin-left: 0.3rem;
+  margin-right: 0.3rem;
+  margin-bottom: 0.3rem;
 }
 
 .mat-mdc-table {
